--- a/lib/sources/stylesheets/components.sass
+++ b/lib/sources/stylesheets/components.sass
@@ -1,3 +1,21 @@
+/*
+ * Css Files
+ */
+
+@import "reset.css"
+@import "flex_grid.css"
+
+//Components
+// @import "components/mixins"
+// @import "componentes/typography"
+
+/*
+ * Components
+ */
+
 @import "components/variables"
 @import "components/mixins"
-@import "componentes/typography"
+@import "components/typography"
+@import "components/utilities"
+@import "components/cover"
+@import "components/info"
