Home page desktop version finished

--- a/lib/sources/stylesheets/components.sass
+++ b/lib/sources/stylesheets/components.sass
@@ -3,7 +3,7 @@
  */
 
 @import "reset.css"
-@import "flex_grid.css"
+@import "flexboxgrid.css"
 
 //Components
 // @import "components/mixins"
@@ -16,6 +16,14 @@
 @import "components/variables"
 @import "components/mixins"
 @import "components/typography"
+@import "components/buttons"
+@import "components/effects"
 @import "components/utilities"
 @import "components/cover"
 @import "components/info"
+@import "components/results"
+@import "components/including"
+@import "components/services"
+@import "components/getIn"
+@import "components/quote"
+@import "components/contact"
