--- a/lib/sources/stylesheets/components/typography.sass
+++ b/lib/sources/stylesheets/components/typography.sass
@@ -1,6 +1,33 @@
-h1
-  font-size: 50px
+html
   font-family: Helvetica
+h1
+  font-size: 38px
   font-weight: 300
+  color: $color_darkRed
   span
-    font-weight: bold
+    font-weight: bolder
+
++desktop
+  h1
+    font-size: 50px
+
+
+h2
+  font-size: 50px
+  font-weight: 300
+
+p
+  line-height: 22px
+  font-size: 16px
+
+a
+  color: $color_orange
+  text-decoration: none
+
+strong
+  font-weight: bolder
+
+label
+  color: darken($color_gray, 10%)
+  letter-spacing: 2px
+  margin-bottom: 10px
