--- a/lib/sources/stylesheets/components/utilities.sass
+++ b/lib/sources/stylesheets/components/utilities.sass
@@ -1,2 +1,21 @@
 .u-textWhite
     color: white
+
+.u-fullHeight
+  height: 100%
+
+.u-textRight
+  text-align: right
+.u-textCenter
+  text-align: center
+.u-textLeft
+  text-align: left
+
+.u-uppercaseTransform
+  text-transform: uppercase
+
+.is-hidden
+  display: none
+
+.is-visible
+  display: block
