--- a/lib/sources/stylesheets/components/variables.sass
+++ b/lib/sources/stylesheets/components/variables.sass
@@ -1,5 +1,37 @@
 /*
- * Colors
+ * Responsive Sizes
  */
 
+$tablet-width: 768px
+$desktop-width: 992px
+$desktopHD-width: 1200px
+
+/*
+ * Radius
+ */
+$border_radius_regular: 2px
+
+/*
+ * Colors
+ */
 $color_black: #23292C
+$color_orange: #FF4948
+$color_darkRed: #F6224C
+$color_beige: #ECAF76
+$color_gray: #CCCCCC
+
+//Buttons colors
+$color_primary: $color_darkRed
+
+/*
+ * Space Between elements
+ */
+
+$margin_space_regular: 30px
+$margin_space_bold: 80px
+
+/*
+ * Font size lead
+ */
+
+$font_size_lead: 24px
