scroll effects disable for mobiles

--- a/lib/sources/stylesheets/components/typography.sass
+++ b/lib/sources/stylesheets/components/typography.sass
@@ -1,7 +1,7 @@
 html
   font-family: Helvetica
 h1
-  font-size: 38px
+  font-size: 35px
   font-weight: 300
   color: $color_darkRed
   span
@@ -18,7 +18,11 @@ h2
 
 p
   line-height: 22px
-  font-size: 16px
+  font-size: 14px
+
++desktop
+  p
+    font-size: 16px
 
 a
   color: $color_orange
