--- a/lib/sources/stylesheets/components/effects.sass
+++ b/lib/sources/stylesheets/components/effects.sass
@@ -1,3 +1,6 @@
+nav
+  display: none
+
 .link-effect
   li
     padding: 0.5em
@@ -22,3 +25,7 @@
       margin-right: 1em
       visibility: hidden
       opacity: 0
+
++tablet
+  nav
+    display: block
