--- a/lib/sources/stylesheets/components/results.sass
+++ b/lib/sources/stylesheets/components/results.sass
@@ -26,5 +26,11 @@
     color: white
     .simbolPercentage
       position: relative
-      font-size: 140px
+      font-size: 102px
       color: $color_darkRed
+
++tablet
+  .Results
+    &-percentage
+     .simbolPercentage
+       font-size: 140px
