--- a/lib/sources/stylesheets/components/services.sass
+++ b/lib/sources/stylesheets/components/services.sass
@@ -21,10 +21,9 @@
 
   &-firstPart,
   &-secondPart
-    width: 100%
     h2
-      width: 500px
-      text-align: right
+      text-align: center
+      margin-bottom: $margin_space_regular
     ul
       padding-left: 1em
       li
@@ -32,7 +31,6 @@
           text-transform: none
   &-list
     background-color: rgba($color_black, 0.5)
-    margin-left: 1em
     padding: 1em 1em
     border-radius: 2px
     box-sizing: border-box
@@ -44,10 +42,10 @@
   &-secondPart
     margin-top: $margin_space_bold
     h2
-      order: 1
-      text-align: left
-    ul
       order: 0
+      text-align: center
+    ul
+      order: 1
       text-align: right
       margin-right: $margin_space_regular
 
@@ -81,14 +79,12 @@
       font-size: 12px
       position: relative
       top: 0
-      left: 0
       strong
         color: $color_darkRed
       .fa
         margin-right: 1em
         color: $color_darkRed
     div
-      width: 500px
       margin: 0 auto
       text-align: center
       position: absolute
@@ -100,3 +96,37 @@
       margin: 0 auto
     &-info
       margin: $margin_space_regular auto 0
+
++tablet
+  .Services
+    &-firstPart,
+    &-secondPart
+      width: 100%
+      h2
+        width: 500px
+        text-align: right
+      ul
+        padding-left: 1em
+        li
+          a
+            text-transform: none
+    &-secondPart
+      h2
+        order: 1
+        text-align: left
+        margin-bottom: auto
+      ul
+        order: 0
+        text-align: right
+        margin-right: $margin_space_regular
+    &-list
+      margin-left: 1em
+      padding: 1em 1em
+      border-radius: 2px
+      width: 100%
+
+    .ServicesDescription
+      .Meta-info
+        // left: 0
+      div
+        // width: 500px
