--- a/lib/sources/stylesheets/components/typography.sass
+++ b/lib/sources/stylesheets/components/typography.sass
@@ -13,13 +13,16 @@ h1
 
 
 h2
-  font-size: 50px
+  font-size: 35px
   font-weight: 300
++desktop
+  h2
+    font-size: 50px
+
 
 p
   line-height: 22px
   font-size: 14px
-
 +desktop
   p
     font-size: 16px
@@ -27,6 +30,11 @@ p
 a
   color: $color_orange
   text-decoration: none
+  font-size: 14px
+
++tablet
+  a
+    font-size: 16px
 
 strong
   font-weight: bolder
