--- a/lib/sources/stylesheets/flexboxgrid.css
+++ b/lib/sources/stylesheets/flexboxgrid.css
@@ -25,8 +25,8 @@
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  margin-right: -1rem;
-  margin-left: -1rem;
+  /*margin-right: -1rem;
+  margin-left: -1rem;*/
 }
 
 .row.reverse {
