Fixed minor styles in info description to any sections

--- a/lib/sources/stylesheets/components/including.sass
+++ b/lib/sources/stylesheets/components/including.sass
@@ -45,5 +45,13 @@
       .Objetion
         .square
           margin-bottom: $margin_space_regular
-          height: 200px
-          width: 200px
+          height: 150px
+          width: 150px
+
++desktop
+  .Including
+    &-objetions
+     .Objetion
+       .square
+         height: 200px
+         width: 200px
