add about us page and styles

--- a/lib/sources/stylesheets/components/buttons.sass
+++ b/lib/sources/stylesheets/components/buttons.sass
@@ -61,3 +61,21 @@
   .btn-menu
     display: none
     visibility: hidden
+
+
+.btn-top
+  background: #000
+  position: fixed
+  bottom: 2em
+  right: 3em
+  color: white
+  padding: 1em
+  z-index: 100
+  border-radius: 3px
+  opacity: 0.4
+  transition: 0.3s ease
+  &:hover
+    opacity: 1 !important
+    background-color: $color_beige
+  &:focus
+    outline: none
