--- a/lib/sources/stylesheets/components/variables.sass
+++ b/lib/sources/stylesheets/components/variables.sass
@@ -16,7 +16,7 @@ $border_radius_regular: 2px
  */
 $color_black: #23292C
 $color_orange: #FF4948
-$color_darkRed: #F6224C
+$color_darkRed: #D52940
 $color_beige: #ECAF76
 $color_gray: #CCCCCC
 
