--- a/lib/sources/stylesheets/components/contact.sass
+++ b/lib/sources/stylesheets/components/contact.sass
@@ -61,8 +61,9 @@ footer
   .markWater-contact
     color: $color_gray
     position: absolute
+    opacity: 0.2
     z-index: 0
-    bottom: 0
+    bottom: 0.2em
     letter-spacing: -50px
   .Contact
     position: relative
