--- a/lib/sources/stylesheets/components/about_us.sass
+++ b/lib/sources/stylesheets/components/about_us.sass
@@ -29,7 +29,7 @@
     min-height: 600px
 
   &-visionAndMission
-    background-color: $color_darkRed
+    background-color: $color_black
     padding: $margin_space_bold 0
     color: white
     min-height: 600px
