--- a/lib/sources/stylesheets/components/cover.sass
+++ b/lib/sources/stylesheets/components/cover.sass
@@ -35,12 +35,13 @@
   .Description
     text-align: center
     h1
-      color: $color_black
+      color: white
       margin-bottom: $margin_space_regular
     p
       width: 100%
       position: relative
       margin-bottom: $margin_space_regular
+      color: white
 
 .lineTop
   height: 6px
