smooth scroll styles

--- a/lib/sources/stylesheets/components.sass
+++ b/lib/sources/stylesheets/components.sass
@@ -3,7 +3,6 @@
  */
 
 @import "reset.css"
-@import "blog.css"
 @import "flexboxgrid.css"
 
 //Components
@@ -29,3 +28,5 @@
 @import "components/quote"
 @import "components/contact"
 @import "components/about_us"
+@import "components/article"
+@import "components/contentPost"
