--- a/lib/sources/stylesheets/components/variables.sass
+++ b/lib/sources/stylesheets/components/variables.sass
@@ -19,6 +19,8 @@ $color_orange: #FF4948
 $color_darkRed: #D52940
 $color_beige: #ECAF76
 $color_gray: #CCCCCC
+$color_twitter: #3CABDA
+$color_facebook: #1D6C92
 
 //Buttons colors
 $color_primary: $color_darkRed
