--- a/lib/sources/stylesheets/components/preloader.sass
+++ b/lib/sources/stylesheets/components/preloader.sass
@@ -1,9 +1,10 @@
 .loading
   width: 100%
-  height: 100vh
+  height: 100%
   position: fixed
   background-color: white
-  z-index: 10000
+  z-index: 100000
+  overflow-y: hidden
 .preloader
   margin: 0 auto
   position: absolute
