--- a/lib/sources/stylesheets/components/contact.sass
+++ b/lib/sources/stylesheets/components/contact.sass
@@ -63,7 +63,7 @@ footer
     position: absolute
     opacity: 0.2
     z-index: 0
-    bottom: 0.2em
+    top: 1.4em
     letter-spacing: -50px
   .Contact
     position: relative
