--- a/lib/sources/stylesheets/components/services.sass
+++ b/lib/sources/stylesheets/components/services.sass
@@ -29,6 +29,10 @@
       li
         a
           text-transform: none
+          i
+            display: none
+            +desktop
+              display: initial
   &-list
     background-color: rgba($color_black, 0.5)
     padding: 1em 1em
