were added styles to page nuestros clientes and loop the clients(backend) inside template

--- a/lib/sources/stylesheets/components.sass
+++ b/lib/sources/stylesheets/components.sass
@@ -28,3 +28,4 @@
 @import "components/contentPost"
 @import "components/preloader"
 @import "components/nav-ministeriosEcuador"
+@import "components/nuestros-clientes"
