vista nueva de tablas de datos realize diseño, boton de busquedat reponsive

--- a/lib/sources/stylesheets/components.sass
+++ b/lib/sources/stylesheets/components.sass
@@ -29,3 +29,4 @@
 @import "components/preloader"
 @import "components/nav-ministeriosEcuador"
 @import "components/nuestros-clientes"
+@import "components/leyes"
