stilos a la tabla de datos correcciones a la pagina de datos

--- a/lib/sources/stylesheets/components.sass
+++ b/lib/sources/stylesheets/components.sass
@@ -30,3 +30,4 @@
 @import "components/nav-ministeriosEcuador"
 @import "components/nuestros-clientes"
 @import "components/leyes"
+@import "components/search"
