--- a/lib/sources/stylesheets/components/buttons.sass
+++ b/lib/sources/stylesheets/components/buttons.sass
@@ -80,12 +80,12 @@
   &:focus
     outline: none
 
-.leyes-boton
+.leyes-buscar
   button
     background: $color_primary
     transition: 0.3s ease
     color: white
-    padding: 0.3em 0.5em
+    padding: 0.5em 0.8em
     border: none
     border-radius: 3px
 
@@ -96,17 +96,16 @@
         width: 120%
         height: 140%
         opacity: 0
-        
+
   input
     text-align: center
-    padding: 0.3em 0.5em
     border-radius: 3px
-    border: none
+    border: 0px
+    border-bottom: 2px solid white
     width: 100%
     margin: 10px 0
     &:hover
-      border: none
-      border-bottom: 2px solid red
+      border-bottom: 2px solid $color_darkRed
     &:focus
       outline: none
       border-bottom: 2px solid $color_darkRed
