--- a/lib/sources/stylesheets/components/leyes.sass
+++ b/lib/sources/stylesheets/components/leyes.sass
@@ -1,87 +1,44 @@
 .leyes
+  font-size: 12px
   margin: 80px 0
+
   &-container
     &-titulo
     h1
-      font-size: 1.5em
+      font-size: 2em
       padding: 40px 0
 
     .leyes-buscar
-        margin: 15px 0
-        text-align: center
+      margin: 15px 0
+      text-align: center
 
     &-table
+    margin-top: 10px
+    //padding-left: 0px
     .estructura-data
-      .numero, .nombre,
-        font-size: 0.9em
-        border: 1px solid black
-        padding: 0.4em 2.9em
-      .registro, .documento
-        display: none
+      .numero, .nombre, .registro, .documento
+        border: 1px solid $color_darkRed
+        padding: 12px 30px
 
     .ley-vigente
       text-align: center
       .estructura-encabezado
+        td
+          border: 1px solid $color_darkRed
+          color: black
+          h3
+            font-weight: lighter
         .estructura-numero
-          border: 1px solid black
-          a
-            color: rgb(83, 83, 83)
+          padding: 10px
         .estructura-titulo
-          border: 1px solid black
+          text-align: left
+          padding: 10px
+        .estructura-cuerpo
+          font-size: 10px
+          padding: 5px
+          text-align: left
+        .estructura-pie
+          border-bottom: 3px groove $color_beige
           padding: 0.4em 0.2em
-          a
-            color: rgb(83, 83, 83)
-            font-size: 0.8em
-            .fa
-              color: red
-        .sumpl-tablet, .pdf-tsblet
-          display: none
-
-      .estructura-cuerpo
-        display: none
-        .estructura-registro
-          font-size: 0.9em
-          border: 1px solid black
-          padding: 0.4em 0.2em
-        .estructura-suple
-          border: 1px solid black
-          font-size: 0.8em
-          padding: 0.4em 0.2em
-
-      .estructura-pie
-        display: none
-        .estructura-documento
-          border: 1px solid black
-          font-size: 0.9em
-          padding: 0.4em 0.2em
-          border-bottom: 3px groove red
-        .estructura-pdf
-          border: 1px solid black
-          border-bottom: 3px groove red
-          padding: 0.4em 0.2em
-
-+tablet
-  .leyes
-    &-container
-      &-table
-      .estructura-data
-        .registro, .documento
-          display: table-cell
-          font-size: 0.9em
-          border: 1px solid black
-          padding: 0.4em 2.9em
-
-      .ley-vigente
-        .estructura-encabezado
-          cursor: default
-          .estructura-numero, .estructura-titulo
-            pointer-events: none
-            .fa
-              display: none
-          .sumpl-tablet, .pdf-tsblet
-            display: table-cell
-            border: 1px solid black
-            padding: 0.4em 0.2em
-            font-size: 0.8em
-        .estructura-cuerpo, .estructura-pie
-          display: none
+      .estructura-encabezado:nth-child(odd)
+        background-color: rgb(224, 219, 218)
