correciones en mobile

--- a/lib/sources/stylesheets/components/leyes.sass
+++ b/lib/sources/stylesheets/components/leyes.sass
@@ -17,7 +17,7 @@
     .estructura-data
       .numero, .nombre, .registro, .documento
         border: 1px solid $color_darkRed
-        padding: 12px 30px
+        padding: 12px 0px
 
     .ley-vigente
       text-align: center
@@ -41,3 +41,10 @@
           padding: 0.4em 0.2em
       .estructura-encabezado:nth-child(odd)
         background-color: rgb(224, 219, 218)
+
++tablet
+  .leyes
+    &-container
+      .estructura-data
+        .numero, .nombre, .registro, .documento
+          padding: 12px 30px
