--- a/lib/sources/stylesheets/components/effects.sass
+++ b/lib/sources/stylesheets/components/effects.sass
@@ -3,13 +3,13 @@ nav
 
 .link-effect
   li
-    padding: 0.5em
+    padding: 0em 0em 0.5em
     overflow: hidden
     a
       transition: 0.3s ease
       overflow: hidden
       position: relative
-      left: -3%
+      // left: -3%
       text-transform: uppercase
       &:hover
         color: $color_beige
