--- a/lib/sources/stylesheets/components/services.sass
+++ b/lib/sources/stylesheets/components/services.sass
@@ -18,7 +18,10 @@
     padding: $margin_space_bold 0
     position: relative
     z-index: 1
-
+  &-row
+    flex-flow: row nowrap;
+    width: 100%;
+    margin-top: 1rem;
   &-firstPart,
   &-secondPart
     h2
